--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,8 +1,20 @@
 {
+  "MongoDB": {
+    "ConnectionString": "mongodb://localhost:port",
+    "DatabaseName": "DatabaseName",
+    "Collections": {
+      "Owners": "Owners",
+      "Properties": "Properties",
+      "PropertyImages": "PropertyImages",
+      "PropertyTraces": "PropertyTraces"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
