Some launch configurations

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "MongoDB": {
-    "ConnectionString": "mongodb://localhost:port",
-    "DatabaseName": "DatabaseName",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "MillionProjectDB",
     "Collections": {
       "Owners": "Owners",
       "Properties": "Properties",
